--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "bootbox": "~4.2.0"
+  },
+  "devDependencies": {
+    "linkbot": "BaroboRobotics/linkbotjs#develop"
   }
 }
