--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,9 @@
     "**/*",
     "!html/**/*"
   ],
-  "dependencies": {
-    "bootstrap": "~3.1.1",
-    "bootbox": "~4.2.0"
-  },
   "devDependencies": {
+    "bootstrap": "~3.1.1",
+    "bootbox": "~4.2.0",
     "linkbot": "BaroboRobotics/linkbotjs#develop"
   }
 }
